feat: add PG_DB as env var

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     environment:
       POSTGRES_USER: ${PG_USER}
       POSTGRES_PASSWORD: ${PG_PASSWORD}
-      POSTGRES_DB: clickhouse_pg_db
+      POSTGRES_DB: ${PG_DB}
     ports:
       - "5432:5432"
     volumes:
